[gd_scene load_steps=15 format=3 uid="uid://b3qphi6tibi4g"]

[ext_resource type="Script" path="res://scripts/objects/BloodChalice.gd" id="1_okifn"]
[ext_resource type="AudioStream" uid="uid://udayjud2os72" path="res://Audio/sfx/maybe placeholders/self cut.mp3" id="3_ykns5"]
[ext_resource type="AudioStream" uid="uid://cfrx4rc1ld7eh" path="res://Audio/sfx/_Be fearful of the demon Mincinos_.mp3" id="4_nrxwe"]
[ext_resource type="AudioStream" uid="uid://mvct3jh3f0k7" path="res://Audio/sfx/maybe placeholders/fx-cinematic-and-dramatic-boom-downer-sound-effect-249545.mp3" id="5_3of5s"]
[ext_resource type="AudioStream" uid="uid://cei8rcl27tsxe" path="res://Placeholders (Will be deleted)/Sounds/lightening-bang-impact-40580 (1).mp3" id="5_ewhkd"]
[ext_resource type="Script" path="res://addons/shaker/src/Vector3/shaker_component3D.gd" id="5_olwgd"]
[ext_resource type="Script" path="res://addons/shaker/data/Vector3/ShakerTypeNoiseShake3D.gd" id="6_v7n66"]
[ext_resource type="Script" path="res://addons/shaker/data/Vector3/ShakerPreset3D.gd" id="7_w8flu"]
[ext_resource type="PackedScene" path="res://scenes/roots/chalice_root.tscn" id="9_otcy0"]

[sub_resource type="BoxShape3D" id="BoxShape3D_3x0wm"]
size = Vector3(0.427979, 0.688721, 0.441162)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_l1l8u"]
frequency = 0.2049

[sub_resource type="NoiseTexture3D" id="NoiseTexture3D_75qxr"]
noise = SubResource("FastNoiseLite_l1l8u")

[sub_resource type="Resource" id="Resource_krqhl"]
script = ExtResource("6_v7n66")
noise_texture = SubResource("NoiseTexture3D_75qxr")
amplitude = Vector3(0.1, 0.1, 0.1)
offset = Vector3(0, 0, 0)
BlendingMode = 0
fade_in = 0.0
fade_out = 0.0
start_percent = 0.0
end_percent = 1.0
_temp_graph = false
bake_internal = 64

[sub_resource type="Resource" id="Resource_galh7"]
script = ExtResource("7_w8flu")
PositionShake = Array[Resource("res://addons/shaker/data/Vector3/BaseShakerType3D.gd")]([SubResource("Resource_krqhl")])
RotationShake = Array[Resource("res://addons/shaker/data/Vector3/BaseShakerType3D.gd")]([])
ScaleShake = Array[Resource("res://addons/shaker/data/Vector3/BaseShakerType3D.gd")]([])
bake_internal = 64
__follow_timeline = false

[node name="BloodChalice" type="RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.42364e-07, -6.05494e-07, 2.91085e-07)
collision_layer = 5
collision_mask = 5
script = ExtResource("1_okifn")
itemName = "Empty Chalice"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.339966, 0)
shape = SubResource("BoxShape3D_3x0wm")

[node name="Cutting sound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_ykns5")
bus = &"SoundEffects"

[node name="SuccessSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_nrxwe")
bus = &"SoundEffects"

[node name="FailSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_ewhkd")
bus = &"SoundEffects"

[node name="SuccessSound2" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_3of5s")
volume_db = -5.0
bus = &"SoundEffects"

[node name="SuccessShake" type="Node3D" parent="."]
script = ExtResource("5_olwgd")
duration = 8.0
fade_out = 1.7411
shakerPreset = SubResource("Resource_galh7")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.340042, 0)
visible = false
light_color = Color(1, 0, 0.0166664, 1)
light_energy = 2.0
light_volumetric_fog_energy = 2.0
light_size = 0.2
omni_range = 1.5

[node name="ChaliceRoot" parent="." instance=ExtResource("9_otcy0")]
